--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>welcome</h1>
     <div class="buttonDiv">
-        <button>Login</button>
+        <a href="login/">
+            <button>Login</button>
+        </a>
     </div>
 </body>
 </html>
