--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/loginStyle.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World I am Login</h1>
+    <div class="loginContainer">
+        <form action="" method="post">
+            <h1>Login</h1>
+            <div class="relativeDiv">
+                <div class="inputsDiv">
+                    <input type="text" placeholder="email...">
+                    <br><br>
+                    <input type="text" placeholder="password">
+                    <br><br><br><br>
+                    <button>Login</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
