Added hint for username and password

--- a/Login/templates/login.html
+++ b/Login/templates/login.html
@@ -20,6 +20,7 @@
                     <input type="text" placeholder="password" name= 'password'>
                     <br><br><br><br>
                     <button>Login</button>
+                    <p class="hint" >The username is <b>admin</b> and the password is <b>password</b></p>
                 </div>
             </div>
         </form>
